# ask-law-pdf

./: pyproject.toml
src/: main.py
