[tool.poetry]
name = "ask-law-pdfs"
version = "0.1.0"
description = ""
authors = ["Julian Sotelo <juliansotelo@mail.fresnostate.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.10"
pypdf2 = "^3.0.1"
streamlit = "^1.31.1"
python-dotenv = "^1.0.1"
openai = "^1.13.3"
faiss-cpu = "^1.8.0"
altair = "^5.2.0"
tiktoken = "^0.6.0"
langchain-community = "^0.0.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
